<resources>
    <string name="app_name">PotholeClient</string>
    <string name="stop">STOP</string>
    <string name="start">START</string>
    <string name="stop_calibration">Termina la calibrazione</string>
    <string name="start_calibration">Inizia la calibrazione</string>
    <string name="greeting_message">Benvenuto!\nInserisci un nickname per iniziare a registrare le buche</string>
    <string name="nickname_hint">XxPotholesSlayerxX</string>
    <string name="login">Accedi</string>
    <string name="logout">Esci</string>
    <string name="register_potholes">Registra buche</string>
    <string name="get_potholes">Lista buche</string>
    <string name="what_do_you_want_to_do">Cosa desideri fare?</string>
    <string name="pothole_locator">Potholes Locator</string>
    <string name="logo">Logo</string>
    <string name="calibration_explanation">Per calibrare il dispositivo inizia la calibrazione e tienilo fermo per qualche secondo</string>
    <string name="registration_explanation">Ora appoggia il dispositivo in una zona che risente delle eventuali buche e inizia a registrare</string>
    <string name="empty_potholes_list">Non c\'è nessuna buca nella tue vicinanze</string>
</resources>